force-app/main/default/objects/SubmitedWorkShift__c/SubmitedWorkShift__c.object-meta.xml
<CustomObject>
    <label>提出シフト</label>
    <nameField>
        <label>提出シフト名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>提出シフト</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>