force-app/main/default/objects/SubmitedWorkShift__c/fields/endingTime__c.field-meta.xml
<CustomField>
    <fullName>endingTime__c</fullName>
    <label>勤務可能終了時間</label>
    <type>Time</type>
</CustomField>