force-app/main/default/objects/SubmitedWorkShift__c/fields/startingTime__c.field-meta.xml
<CustomField>
    <fullName>startingTime__c</fullName>
    <label>勤務可能開始時間</label>
    <type>Time</type>
</CustomField>