force-app/main/default/objects/SubmitedWorkShift__c/fields/workDay__c.field-meta.xml
<CustomField>
    <fullName>workDay__c</fullName>
    <label>勤務可能日</label>
    <type>Date</type>
</CustomField>